Added the services section to the landing page

--- a/pages/index.html
+++ b/pages/index.html
@@ -64,33 +64,39 @@
       </div>
       <!-- End of Hero Section -->
 
+
+
+
       <!-- Services Section -->
       <div class="px-5" id="featured-3">
-        <h2 class="pb-2 text-center border-bottom">What we do</h2>
-        <!-- <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
+        <h2 class="pb-2 text-center border-bottom">Our Services</h2>
+
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-2">
           <div class="feature col">
-            <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
+            <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-success bg-gradient text-white fs-2 mb-3">
               <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
             </div>
-            <h2>Featured title</h2>
+            <h2>Waste pick up</h2>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
-            <a href="#" class="icon-link d-inline-flex align-items-center">
-              Call to action
+            <a href="#" class="icon-link d-inline-flex text-success align-items-center">
+              Get started
               <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
             </a>
           </div>
+
           <div class="feature col">
-            <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
+            <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-success bg-gradient text-white fs-2 mb-3">
               <svg class="bi" width="1em" height="1em"><use xlink:href="#people-circle"/></svg>
             </div>
-            <h2>Featured title</h2>
+            <h2>Recycling</h2>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
             <a href="#" class="icon-link d-inline-flex align-items-center">
-              Call to action
+              Get started
               <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
             </a>
           </div>
-          <div class="feature col">
+
+          <!-- <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
               <svg class="bi" width="1em" height="1em"><use xlink:href="#toggles2"/></svg>
             </div>
@@ -101,8 +107,19 @@
               <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
             </a>
           </div>
+          <div class="feature col">
+            <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-primary bg-gradient text-white fs-2 mb-3">
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
+            </div>
+            <h2>Featured title</h2>
+            <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
+            <a href="#" class="icon-link d-inline-flex align-items-center">
+              Call to action
+              <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
+            </a>
+          </div> -->
         </div>
-      </div> -->
+      </div>
 
       <script src="../script/main.js"></script>
 </body>
