--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Waste Management</title>
-    <link href="./style.css" rel="stylesheet">
-    <link rel="stylesheet" href="./bootstrap.min.css">
+    <link href="./style/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="./style/bootstrap.min.css">
 </head>
 <body>
     
-    <script src="./script.js"></script>
+    <script src="./script/main.js"></script>
 </body>
 </html>
