line 120 in index.html

--- a/pages/index.html
+++ b/pages/index.html
@@ -117,7 +117,7 @@
 
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-green bg-gradient text-white fs-2 mb-3">
-                <svg class="bi" width="1em" height="1em"><use xlink:href="#collection"/></svg>
+              <i class='bx bx-spray-can'></i>
               </div>
             <h2>Cleaning Service</h2>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
