Added new icons to the landing page

--- a/pages/index.html
+++ b/pages/index.html
@@ -50,7 +50,7 @@
               </ul>
 
               <ul class="list-unstyled">
-                <li class="mb-4"><i class='bx bx-home me-2' style='color:#00b300  ></i>Cleaning Services</li>
+                <li class="mb-4"><i class='bx bx-home me-2' style='color:#00b300'  ></i>Cleaning Services</li>
                 <li><i class='bx bx-recycle me-2' style='color:#00b300'  ></i>Sanitation</li>
               </ul>
 
@@ -90,7 +90,7 @@
       <div class="px-5 my-5" id="featured-3">
         <h2 class="pb-2 text-center border-bottom">Our Services</h2>
 
-        <div class="row g-4 py-5 row-cols-1 row-cols-lg-2">
+        <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
           <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center text-center justify-content-center bg-gradient text-white fs-2 mb-3">
                 <i class='bx bxs-truck me-2 text-green' ></i>
@@ -115,7 +115,7 @@
             </a>
           </div>
 
-          <!-- <div class="feature col">
+          <div class="feature col">
             <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-green bg-gradient text-white fs-2 mb-3">
               <i class='bx bx-spray-can'></i>
               </div>
@@ -125,11 +125,10 @@
               Get started
               <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
             </a>
-          </div> -->
+          </div>
         </div>
       </div>
 
-      <!-- Testimonials Section -->
       
 
       <!-- JavaScript Bundle with Popper -->
