--- a/pages/index.html
+++ b/pages/index.html
@@ -116,8 +116,8 @@
           </div>
 
           <div class="feature col">
-            <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-green bg-gradient text-white fs-2 mb-3">
-              <i class='bx bx-spray-can'></i>
+            <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient text-white fs-2 mb-3">
+              <i class='bx bx-spray-can me-2 text-green'></i>
               </div>
             <h2>Cleaning Service</h2>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
