Changed text color on the landing page

--- a/pages/index.html
+++ b/pages/index.html
@@ -16,7 +16,7 @@
     <div class="px-5 fixed-top bg-light">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 border-bottom">
           <a href="/" class="d-flex fw-bold fs-2 align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
-            <span class="text-success">nameless</span>
+            <span class="text-green">nameless</span>
           </a>
     
           <ul class="nav col-12 gap-3 col-md-auto mb-2 justify-content-center mb-md-0">
@@ -87,7 +87,7 @@
       </div>
 
       <!-- Services Section -->
-      <div class="px-5 my-5" id="featured-3">
+      <div class="px-5 my-5" id="ourServices">
         <h2 class="pb-2 text-center border-bottom">Our Services</h2>
 
         <div class="row g-4 py-5 row-cols-1 row-cols-lg-3">
@@ -95,11 +95,10 @@
             <div class="feature-icon d-inline-flex align-items-center text-center justify-content-center bg-gradient text-white fs-2 mb-3">
                 <i class='bx bxs-truck me-2 text-green' ></i>
             </div>
-            <h2>Waste pick up</h2>
+            <h2 class="text-green fw-bold">Waste pick up</h2>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
             <a href="#" class="icon-link d-inline-flex text-success align-items-center">
-              Get started
-              <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
+              Get started 
             </a>
           </div>
 
@@ -107,23 +106,21 @@
             <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient text-white fs-2 mb-3">
                 <i class='bx bx-recycle me-2 text-green'  ></i>
             </div>
-            <h2>Recycling</h2>
+            <h2 class="text-green fw-bold">Recycling</h2>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
             <a href="#" class="icon-link d-inline-flex text-success align-items-center">
               Get started
-              <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
             </a>
           </div>
 
           <div class="feature col">
-            <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-green bg-gradient text-white fs-2 mb-3">
-              <i class='bx bx-spray-can'></i>
+            <div class="feature-icon d-inline-flex align-items-center justify-content-center bg-gradient text-white fs-2 mb-3">
+              <i class='bx bx-spray-can me-2 text-green'></i>
               </div>
-            <h2>Cleaning Service</h2>
+            <h2 class="text-green fw-bold">Cleaning Service</h2>
             <p>Paragraph of text beneath the heading to explain the heading. We'll add onto it with another sentence and probably just keep going until we run out of words.</p>
             <a href="#" class="icon-link d-inline-flex text-success align-items-center">
               Get started
-              <svg class="bi" width="1em" height="1em"><use xlink:href="#chevron-right"/></svg>
             </a>
           </div>
         </div>
