--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -7,15 +7,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/main.css">
-    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="../style/style.css" rel="stylesheet">
 </head>
 
 <body>
     <!-- sign up form -->
     <div class="container col-xl-10 col-xxl-8 px-4 py-5">
-        <div class="row align-items-center g-lg-5 py-5">
+        <div class="d-flex flex-lg-row-reverse row align-items-center g-lg-5 py-5">
             <div class="col-lg-5 text-center text-lg-start">
-                <img src="./images/img3.webp" alt="" class="image1">
+                <img src="../assets/images/img3.webp" alt="" class="d-block img-fluid">
             </div>
             <div class="col-md-10 mx-auto col-lg-7">
                 <form class="p-4 p-md-5 ">
@@ -70,7 +72,7 @@
             </div>
         </div>
     </div>
-    <script src="./js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 
 </html>
