--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -41,11 +41,9 @@
                         </div>
                         <div class="col-6">
                             <label for="lga" class="form-label fw-bold">Local Government Area</label>
-                            <select class="form-select">
+                            <select class="form-select" id="LGA">
                         <option>...</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option></select>
+                       </select>
                         </div>
                     </div>
 
@@ -73,6 +71,8 @@
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="../script/main.js"></script>
+    <script src="../script/api.json"></script>
 </body>
 
 </html>
