--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -37,7 +37,7 @@
                     <div class="row d-flex justify-content-between mb-3">
                         <div class="col-6">
                             <label for="email" class="form-label fw-bold">Email Address</label>
-                            <input type="password" class="form-control" id="password">
+                            <input type="email" class="form-control" id="email" autocomplete="email">
                         </div>
                         <div class="col-6">
                             <label for="lga" class="form-label fw-bold">Local Government Area</label>
