--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -42,10 +42,11 @@
                         <div class="col-6">
                             <label for="lga" class="form-label fw-bold">Local Government Area</label>
                             <select class="form-select">
-                        <option>...</option>
-                        <option value="1">One</option>
-                        <option value="2">Two</option>
-                        <option value="3">Three</option></select>
+                                <option>...</option>
+                                <option value="1">One</option>
+                                <option value="2">Two</option>
+                                <option value="3">Three</option>
+                            </select>
                         </div>
                     </div>
 
