--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -20,7 +20,7 @@
                 <img src="../assets/images/img3.webp" alt="" class="d-block img-fluid">
             </div>
             <div class="col-md-10 mx-auto col-lg-7">
-                <form class="p-4 p-md-5 ">
+                <form class="p-4 p-md-5 " onsubmit="return validateForm()">
                     <div class="row d-flex justify-content-between mb-3">
                         <div class="col-6">
                             <label for="fname" class="form-label fw-bold">First Name</label>
