--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -14,6 +14,63 @@
 
 <body>
     <!-- sign up form -->
+    <!-- <div class="container col-xl-10 col-xxl-8 px-4 py-5">
+        <div class="d-flex flex-lg-row-reverse row align-items-center g-lg-5 py-5">
+            <div class="col-lg-5 text-center text-lg-start">
+                <img src="../assets/images/img3.webp" alt="" class="d-block img-fluid">
+            </div>
+            <div class="col-md-10 mx-auto col-lg-7">
+                <form class="p-4 p-md-5 ">
+                    <div class="row d-flex justify-content-between mb-3">
+                        <div class="col-6">
+                            <label for="fname" class="form-label fw-bold">First Name</label>
+                            <input type="text" class="form-control" id="fname">
+                        </div>
+
+                        <div class="col-6">
+                            <label for="lname" class="form-label fw-bold">Last Name</label>
+                            <input type="text" class="form-control" id="lname">
+                        </div>
+
+                    </div>
+
+                    <div class="row d-flex justify-content-between mb-3">
+                        <div class="col-6">
+                            <label for="email" class="form-label fw-bold">Email Address</label>
+                            <input type="email" class="form-control" id="email" autocomplete="email">
+                        </div>
+                        <div class="col-6">
+                            <label for="lga" class="form-label fw-bold">Local Government Area</label>
+                            <select class="form-select" id="LGA">
+                        <option selected>...</option>
+                       </select>
+                        </div>
+                    </div>
+
+                    <div class="row d-flex justify-content-between mb-3">
+                        <div class="col-6">
+                            <label for="password" class="form-label fw-bold">Password</label>
+                            <input type="password" class="form-control" id="password">
+                        </div>
+
+                        <div class="col-6">
+                            <label for="confirmPassword" class="form-label fw-bold">Confirm Password</label>
+                            <input type="password" class="form-control" id="confirmPassword">
+                        </div>
+                    </div>
+
+                    <div class="mb-3 form-check">
+                        <input type="checkbox" class="form-check-input" id="rememberUser">
+                        <label class="form-check-label fw-bold" for="rememberUser">Remember Me</label>
+                    </div>
+                    <div class="d-flex justify-content-center">
+                        <button type="submit" class="btn btn-success fw-bold  w-50">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div> -->
+
     <div class="container col-xl-10 col-xxl-8 px-4 py-5">
         <div class="d-flex flex-lg-row-reverse row align-items-center g-lg-5 py-5">
             <div class="col-lg-5 text-center text-lg-start">
@@ -42,7 +99,7 @@
                         <div class="col-6">
                             <label for="lga" class="form-label fw-bold">Local Government Area</label>
                             <select class="form-select" id="LGA">
-                        <option>...</option>
+                        <option selected>...</option>
                        </select>
                         </div>
                     </div>
@@ -64,12 +121,15 @@
                         <label class="form-check-label fw-bold" for="rememberUser">Remember Me</label>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-success fw-bold  w-50">Submit</button>
+                        <button type="submit" class="btn btn-green fw-bold  w-50">Submit</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
+
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="../script/main.js"></script>
     <script src="../script/api.json"></script>
