Added the testimonials section

--- a/pages/index.html
+++ b/pages/index.html
@@ -87,7 +87,7 @@
       </div>
 
       <!-- Services Section -->
-      <div class="px-5 mt-5" id="featured-3">
+      <div class="px-5 py-3 my-4 mt-5" id="featured-3">
         <h2 class="pb-2 text-center border-bottom" id="ourServices">Our Services</h2>
 
         <div class="row g-4 row-cols-1 row-cols-lg-3">
@@ -127,21 +127,78 @@
       </div>
       
       <!-- Third Section -->
-      <div class="col-xxl-8 px-5 py-5">
-        <div class="row flex-lg-row align-items-center g-5 py-5">
-          <div class="col-10 col-sm-8 col-lg-6">
-            <img src="../assets/images/7934.jpg" class="d-block mx-lg-auto img-fluid" alt="" width="700" height="500" loading="lazy">
-          </div>
-          <!-- <div class="col-lg-6">
-            <h1 class="display-5 fw-bold lh-1 mb-3 text-green">Idea go come</h1>
-          </div> -->
-        </div>
-      </div>
+      <hr>
+      <h1 class="text-center bg-danger text-white">Still Working on this section (Work deyy!!!!!)</h1>
+      <hr>
 
       <!-- Testimonials -->
-      <hr>
+      <!-- <hr>
       <h1 class="text-center bg-danger text-white">Still Working on this section (Testimonials)</h1>
-      <hr>
+      <hr> -->
+      <section class="px-5">
+        <div class="row d-flex justify-content-center">
+          <div class="col-md-10 col-xl-8 text-center">
+            <h3 class="mb-4">Testimonials</h3>
+            <p class="mb-4 pb-2 mb-md-5 pb-md-0">
+                A few words from some of our satisfied customers. Abeg boss, add your own, WE DEY LOYALLLL!!!!!!
+            </p>
+          </div>
+        </div>
+      
+        <div class="row text-center d-flex align-items-stretch">
+          <div class="col-md-4 mb-5 mb-md-0 d-flex align-items-stretch">
+            <div class="card testimonial-card">
+              <div class="card-up" style="background-color: #9d789b;"></div>
+              <div class="avatar mx-auto bg-white">
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(1).webp"
+                  class="rounded-circle img-fluid" />
+              </div>
+              <div class="card-body">
+                <h4 class="mb-4">Hilary Soberekon</h4>
+                <hr />
+                <p class="dark-grey-text mt-4">
+                  <i class="fas fa-quote-left pe-2"></i>Lorem ipsum dolor sit amet eos adipisci,
+                  consectetur adipisicing elit.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-5 mb-md-0 d-flex align-items-stretch">
+            <div class="card testimonial-card">
+              <div class="card-up" style="background-color: #7a81a8;"></div>
+              <div class="avatar mx-auto bg-white">
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(2).webp"
+                  class="rounded-circle img-fluid" />
+              </div>
+              <div class="card-body">
+                <h4 class="mb-4">Chisa Adiele</h4>
+                <hr />
+                <p class="dark-grey-text mt-4">
+                  <i class="fas fa-quote-left pe-2"></i>Neque cupiditate assumenda in maiores
+                  repudi mollitia architecto.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4 mb-0 d-flex align-items-stretch">
+            <div class="card testimonial-card">
+              <div class="card-up" style="background-color: #6d5b98;"></div>
+              <div class="avatar mx-auto bg-white">
+                <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(9).webp"
+                  class="rounded-circle img-fluid" />
+              </div>
+              <div class="card-body">
+                <h4 class="mb-4">Daniel Harry</h4>
+                <hr />
+                <p class="dark-grey-text mt-4">
+                  <i class="fas fa-quote-left pe-2"></i>Delectus impedit saepe officiis ab
+                  aliquam repellat rem unde ducimus.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
       <!-- End of Testimonials Section -->
 
       <div class="px-4 py-5 my-5 text-center text-white bg-green border-cont">
