--- a/pages/signUp.html
+++ b/pages/signUp.html
@@ -19,15 +19,15 @@
             <div class="col-lg-5 text-center text-lg-start">
                 <img src="../assets/images/img3.webp" alt="" class="d-block img-fluid">
             </div>
-            <div class="col-md-10 mx-auto col-lg-7">
+            <div class="col-sm-12 col-md-10 mx-auto col-lg-7">
                 <form class="p-4 p-md-5 " onsubmit="return validateForm()">
                     <div class="row d-flex justify-content-between mb-3">
-                        <div class="col-6">
+                        <div class="col-sm-12 col-lg-6">
                             <label for="fname" class="form-label fw-bold">First Name</label>
                             <input type="text" class="form-control" id="fname">
                         </div>
 
-                        <div class="col-6">
+                        <div class="col-sm-12 col-lg-6">
                             <label for="lname" class="form-label fw-bold">Last Name</label>
                             <input type="text" class="form-control" id="lname">
                         </div>
@@ -35,11 +35,11 @@
                     </div>
 
                     <div class="row d-flex justify-content-between mb-3">
-                        <div class="col-6">
+                        <div class="col-sm-12 col-lg-6">
                             <label for="email" class="form-label fw-bold">Email Address</label>
                             <input type="email" class="form-control" id="email" autocomplete="email">
                         </div>
-                        <div class="col-6">
+                        <div class="col-sm-12 col-lg-6">
                             <label for="lga" class="form-label fw-bold">Local Government Area</label>
                             <select class="form-select" id="LGA">
                                 <option>...</option>
@@ -48,12 +48,12 @@
                     </div>
 
                     <div class="row d-flex justify-content-between mb-3">
-                        <div class="col-6">
+                        <div class="col-sm-12 col-lg-6">
                             <label for="password" class="form-label fw-bold">Password</label>
                             <input type="password" class="form-control" id="password">
                         </div>
 
-                        <div class="col-6">
+                        <div class="col-sm-12 col-lg-6">
                             <label for="confirmPassword" class="form-label fw-bold">Confirm Password</label>
                             <input type="password" class="form-control" id="confirmPassword">
                         </div>
@@ -64,7 +64,7 @@
                         <label class="form-check-label fw-bold" for="rememberUser">Remember Me</label>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-success fw-bold  w-50">Submit</button>
+                        <button type="submit" class="btn btn-success fw-bold w-50">Submit</button>
                     </div>
                 </form>
             </div>
