signUp.html meet the team

--- a/pages/index.html
+++ b/pages/index.html
@@ -148,11 +148,11 @@
         <div class="row text-center d-flex align-items-stretch">
           <div class="col-md-4 mb-5 mb-md-0 d-flex align-items-stretch">
             <div class="card testimonial-card">
-              <div class="card-up" style="background-color: #9d789b;"></div>
-              <div class="avatar mx-auto bg-white">
+              <div class="card-up" style="background-color: #008b13;"></div>
+              <!-- <div class="avatar mx-auto bg-white">
                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(1).webp"
                   class="rounded-circle img-fluid" />
-              </div>
+              </div> -->
               <div class="card-body">
                 <h4 class="mb-4">Hilary Soberekon</h4>
                 <hr />
@@ -165,11 +165,11 @@
           </div>
           <div class="col-md-4 mb-5 mb-md-0 d-flex align-items-stretch">
             <div class="card testimonial-card">
-              <div class="card-up" style="background-color: #7a81a8;"></div>
-              <div class="avatar mx-auto bg-white">
+              <div class="card-up myDiv"></div>
+              <!-- <div class="avatar mx-auto bg-white">
                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(2).webp"
                   class="rounded-circle img-fluid" />
-              </div>
+              </div> -->
               <div class="card-body">
                 <h4 class="mb-4">Chisa Adiele</h4>
                 <hr />
@@ -182,11 +182,11 @@
           </div>
           <div class="col-md-4 mb-0 d-flex align-items-stretch">
             <div class="card testimonial-card">
-              <div class="card-up" style="background-color: #6d5b98;"></div>
-              <div class="avatar mx-auto bg-white">
+              <div class="card-up" style="background-color: #008b13;"></div>
+              <!-- <div class="avatar mx-auto bg-white">
                 <img src="https://mdbcdn.b-cdn.net/img/Photos/Avatars/img%20(9).webp"
                   class="rounded-circle img-fluid" />
-              </div>
+              </div> -->
               <div class="card-body">
                 <h4 class="mb-4">Daniel Harry</h4>
                 <hr />
