Redesigned the Sign up and Sign in pages

--- a/pages/index.html
+++ b/pages/index.html
@@ -29,7 +29,7 @@
     
           <div class="col-md-3 me-5 text-end">
             <!-- <button type="button" class="btn btn-outline-success me-2">Login</button> -->
-            <button type="button" class="btn btn-green">Get started.</button>
+            <button type="button" class="btn btn-green btn-lg px-4">Get started</button>
           </div>
         </header>
       </div>
@@ -46,18 +46,18 @@
             <div class="d-flex justify-content-center justify-content-lg-start flex-row fw-bold align-items-center fs-5 mb-3">
 
               <ul class="me-4 list-unstyled">
-                <li class="mb-4"><i class='bx bxs-truck me-2' style='color:#00b300' ></i>Waste Pickup</li>
-                <li><i class='bx bx-recycle me-2' style='color:#00b300'  ></i>Recycling</li>
+                <li class="mb-4"><i class='bx bxs-truck me-2' style='color:#00b300'></i>Waste Pickup</li>
+                <li><i class='bx bx-recycle me-2' style='color:#00b300'></i>Recycling</li>
               </ul>
 
               <ul class="list-unstyled">
-                <li class="mb-4"><i class='bx bx-home me-2' style='color:#00b300'  ></i>Cleaning Services</li>
-                <li><i class='bx bx-recycle me-2' style='color:#00b300'  ></i>Sanitation</li>
+                <li class="mb-4"><i class='bx bx-home me-2' style='color:#00b300'></i>Cleaning Services</li>
+                <li><i class='bx bx-recycle me-2' style='color:#00b300'></i>Sanitation</li>
               </ul>
 
             </div>
 
-            <div class="d-grid gap-2 d-md-flex justify-content-md-start">
+            <div class="d-grid d-md-flex justify-content-md-start">
               <button type="button" class="btn btn-green btn-lg px-4">Get started</button>
             </div>
           </div>
