--- a/pages/userAuth/signIn.html
+++ b/pages/userAuth/signIn.html
@@ -19,48 +19,28 @@
                 <img src="../assets/images/Recycling-bro.svg" alt="" class="d-block img-fluid">
             </div>
             <div class="col-md-10 col-lg-6">
+                <h3 class="text-center">Sign In</h3>
                 <form class="p-md-5" onsubmit="return validateForm()">
-                    <div class="row d-flex justify-content-between mb-3">
-                        <div class="col-6">
-                            <label for="fname" class="form-label fw-bold">First Name</label>
-                            <input type="text" class="form-control" id="fname">
-                        </div>
-
-                        <div class="col-6">
-                            <label for="lname" class="form-label fw-bold">Last Name</label>
-                            <input type="text" class="form-control" id="lname">
-                        </div>
-
-                    </div>
 
                     <div class="row d-flex justify-content-between mb-3">
-                        <div class="col-6">
+                        <div class="col-12">
                             <label for="email" class="form-label fw-bold">Email Address</label>
                             <input type="email" class="form-control" id="email" autocomplete="email">
                         </div>
-                        <div class="col-6">
-                            <label for="lga" class="form-label fw-bold">Local Government Area</label>
-                            <select class="form-select" id="LGA">
-                                <option>...</option>
-                            </select>
-                        </div>
                     </div>
 
                     <div class="row d-flex justify-content-between mb-3">
-                        <div class="col-6">
+                        <div class="col-12">
                             <label for="password" class="form-label fw-bold">Password</label>
                             <input type="password" class="form-control" id="password">
                         </div>
 
-                        <div class="col-6">
-                            <label for="confirmPassword" class="form-label fw-bold">Confirm Password</label>
-                            <input type="password" class="form-control" id="confirmPassword">
-                        </div>
                     </div>
 
                     <div class="mb-3 form-check">
                         <input type="checkbox" class="form-check-input" id="rememberUser">
                         <label class="form-check-label fw-bold" for="rememberUser">Remember Me</label>
+                        <a href="" class="float-end text-green text-decoration-none">Forgot Password?</a>
                     </div>
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn btn-green fw-bold  w-50">Submit</button>
