--- a/pages/userAuth/signUp.html
+++ b/pages/userAuth/signUp.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Sign in</title>
 
     <link rel="shortcut icon" href="../assets/images/recycle-bin.png" type="image/x-icon">
-    <link rel="stylesheet" href="./css/main.css">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link href="../style/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="../style/signUp.css">
 </head>
-
 <body>
-    <!-- sign up form -->
-    <div class="container col-xl-10 col-xxl-8 px-4 py-5">
-        <div class="d-flex flex-lg-row-reverse row align-items-center g-lg-5 py-5">
-            <div class="col-lg-5 text-center text-lg-start">
-                <img src="../assets/images/img3.webp" alt="" class="d-block img-fluid">
+    <div class="container col-xl-10 col-xxl-8 pt-5">
+        <div class="d-flex flex-lg-row row align-items-center bg-feint">
+            <div class="col-lg-6 text-center text-lg-start">
+                <img src="../assets/images/Recycling-bro.svg" alt="" class="d-block img-fluid">
             </div>
-            <div class="col-sm-12 col-md-10 mx-auto col-lg-7">
-                <form class="p-4 p-md-5 " onsubmit="return validateForm()">
+            <div class="col-md-10 col-lg-6">
+                <h3 class="text-center">Create an account</h3>
+                <form class="p-md-5" onsubmit="return validateForm()">
                     <div class="row d-flex justify-content-between mb-3">
-                        <div class="col-sm-12 col-lg-6">
+                        <div class="col-6">
                             <label for="fname" class="form-label fw-bold">First Name</label>
                             <input type="text" class="form-control" id="fname">
                         </div>
 
-                        <div class="col-sm-12 col-lg-6">
+                        <div class="col-6">
                             <label for="lname" class="form-label fw-bold">Last Name</label>
                             <input type="text" class="form-control" id="lname">
                         </div>
@@ -37,11 +35,11 @@
                     </div>
 
                     <div class="row d-flex justify-content-between mb-3">
-                        <div class="col-sm-12 col-lg-6">
+                        <div class="col-6">
                             <label for="email" class="form-label fw-bold">Email Address</label>
                             <input type="email" class="form-control" id="email" autocomplete="email">
                         </div>
-                        <div class="col-sm-12 col-lg-6">
+                        <div class="col-6">
                             <label for="lga" class="form-label fw-bold">Local Government Area</label>
                             <select class="form-select" id="LGA">
                                 <option>...</option>
@@ -50,12 +48,12 @@
                     </div>
 
                     <div class="row d-flex justify-content-between mb-3">
-                        <div class="col-sm-12 col-lg-6">
+                        <div class="col-6">
                             <label for="password" class="form-label fw-bold">Password</label>
                             <input type="password" class="form-control" id="password">
                         </div>
 
-                        <div class="col-sm-12 col-lg-6">
+                        <div class="col-6">
                             <label for="confirmPassword" class="form-label fw-bold">Confirm Password</label>
                             <input type="password" class="form-control" id="confirmPassword">
                         </div>
@@ -66,19 +64,15 @@
                         <label class="form-check-label fw-bold" for="rememberUser">Remember Me</label>
                     </div>
                     <div class="d-flex justify-content-center">
-                        <button type="submit" class="btn btn-success fw-bold w-50">Submit</button>
+                        <button type="submit" class="btn btn-green fw-bold  w-50">Submit</button>
                     </div>
                 </form>
             </div>
         </div>
     </div>
 
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="../script/main.js"></script>
     <script src="../script/api.json"></script>
+    <script src="../script/main.js"></script>
 </body>
-
 </html>
