--- a/pages/userAuth/signIn.html
+++ b/pages/userAuth/signIn.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign in</title>
 
-    <link rel="shortcut icon" href="../assets/images/recycle-bin.png" type="image/x-icon">
+    <link rel="shortcut icon" href="../../assets/images/recycle-bin.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <link href="../style/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="../style/signUp.css">
+    <link href="../../style/style.css" rel="stylesheet">
+    <link rel="stylesheet" href="../../style/signUp.css">
 </head>
 <body>
     <div class="container col-xl-10 col-xxl-8 pt-5">
         <div class="d-flex flex-lg-row row align-items-center bg-feint">
             <div class="col-lg-6 text-center text-lg-start">
-                <img src="../assets/images/Recycling-bro.svg" alt="" class="d-block img-fluid">
+                <img src="../../assets/images/Recycling-bro.svg" alt="" class="d-block img-fluid">
             </div>
             <div class="col-md-10 col-lg-6">
                 <h3 class="text-center">Sign In</h3>
@@ -51,7 +51,7 @@
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
-    <script src="../script/api.json"></script>
-    <script src="../script/main.js"></script>
+    <script src="../../script/api.json"></script>
+    <script src="../../script/main.js"></script>
 </body>
 </html>
