Added scheduele pick up page

--- a/pages/customer/customerDash.html
+++ b/pages/customer/customerDash.html
@@ -22,7 +22,7 @@
 <div class="row w-100">
 
     <!-- Side Nav Bar -->
-    <div class="d-flex col-2 flex-column flex-shrink-0 p-3 bg-light position-sticky sidebar collapse fixed-top" style="height: 100vh;">
+    <div class="d-flex col-3 flex-column flex-shrink-0 p-3 bg-light position-sticky sidebar collapse fixed-top" style="height: 100vh;">
         <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
           <span class="text-green ms-5 fs-4 fw-bold">nameless</span>
         </a>
@@ -35,7 +35,7 @@
             </a>
           </li>
           <li>
-            <a href="#" class="nav-link link-dark">
+            <a href="./scheduelePickup.html" class="nav-link link-dark">
                 <i class='bx bxs-truck mx-3'></i>
                 Pick up
             </a>
@@ -76,7 +76,7 @@
       <!-- End of Side Nav Bar -->
 
     <!-- Main Content -->
-      <div class="col-10 ps-4 d-flex bg-white flex-column pt-4">
+      <div class="col-9 ps-4 d-flex bg-white flex-column pt-4">
         <h5 class="fs-3 ms-5">Welcome, Michael!</h5>
         <!-- Banner -->
         <div class="d-flex align-items-center shadow-lg justify-content-between row-cols-2 bg-green edge text-light mb-5 mx-2">
@@ -84,7 +84,7 @@
                 <p class="lh-3 fs-3">
                     Waste management made easy with the click of a button
                 </p>
-                <button class="btn btn-light">Scheduele Pick up</button>
+                <a href="./scheduelePickup.html"><button class="btn btn-light">Scheduele Pick up</button></a>
             </div>
             <div class="col">
                 <img src="../../assets/images/Recycling-bro.svg" class="d-block float-end me-5 img-fluid" height="70" width="250" alt="">
