--- a/pages/userAuth/signUp.html
+++ b/pages/userAuth/signUp.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sign in</title>
+    <title>Sign up</title>
 
     <link rel="shortcut icon" href="../../assets/images/recycle-bin.png" type="image/x-icon">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
@@ -16,7 +16,7 @@
     <div class="container col-xl-10 col-xxl-8 pt-5">
         <div class="d-flex flex-lg-row row align-items-center bg-feint">
             <div class="col-lg-6 text-center text-lg-start">
-                <img src="../assets/images/Recycling-bro.svg" alt="" class="d-block img-fluid">
+                <img src="../../assets/images/Recycling-bro.svg" alt="" class="d-block img-fluid">
             </div>
             <div class="col-md-10 col-lg-6">
                 <h3 class="text-center">Create an account</h3>
