changed submit button to login in login.

--- a/pages/userAuth/forgotPassword.html
+++ b/pages/userAuth/forgotPassword.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +13,7 @@
     <link href="../../style/style.css" rel="stylesheet">
     <link rel="stylesheet" href="../../style/signUp.css">
 </head>
+
 <body>
     <div class="container col-xl-10 col-xxl-8 pt-5">
         <div class="d-flex flex-lg-row row align-items-center mt-5 bg-feint">
@@ -27,7 +29,7 @@
                             <label for="email" class="form-label fw-bold">Email Address</label>
                             <input type="email" class="form-control" id="email" autocomplete="email">
                         </div>
-                    </div>>
+                    </div>
 
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn btn-green fw-bold mt-4 w-50">Submit</button>
@@ -41,4 +43,5 @@
     <script src="../../script/api.json"></script>
     <script src="../../script/main.js"></script>
 </body>
+
 </html>
