--- a/pages/customer/customerDash.html
+++ b/pages/customer/customerDash.html
@@ -104,7 +104,7 @@
                 <div class="col-3 p-3 shadow d-flex flex-column">
                     <i class='bx bx-calendar fs-1 mb-2' style='color:#ffdb00'  ></i>
                     <span class="text-warning fs-1 fw-bold">02</span>
-                    <p class="fs-5">Scheduele Pick up</p>
+                    <p class="fs-5">Schedule Pick up</p>
                 </div>
                 <div class="col-3 p-3 shadow d-flex flex-column">
                     <i class='bx bxs-truck fs-1 mb-2' style='color:#ffdb00' ></i>
