--- a/pages/customer/scheduelePickup.html
+++ b/pages/customer/scheduelePickup.html
@@ -76,7 +76,7 @@
           <!-- Main content -->
         <div id="main-content" class="col-9 ps-4 d-flex bg-white flex-column pt-3">
             <div>
-                <h2 class="text-black text-center">Scheduele Pick up</h2>
+                <h2 class="text-black text-center">Schedule Pick up</h2>
                 <hr>
             </div>
             <!-- <div id="progress">
