--- a/pages/index.html
+++ b/pages/index.html
@@ -161,7 +161,7 @@
     </div>
 
     <div class="w-100 text-center d-flex gap-5 justify-content-center justify-content-between w-100 mt-5" >
-      <div class="position-relative bg-white px-4" style="border-radius: 20px;">
+      <div class="position-relative bg-white px-5 pb-4" style="border-radius: 20px;">
         <img class="position-absolute top-0 start-50 translate-middle rounded-circle"
           src="../assets/images/Avatars/undefined.png" alt="Avatar">
         <br>
@@ -183,7 +183,7 @@
       </div>
 
 
-      <div class="position-relative bg-white px-4" style="border-radius: 20px;">
+      <div class="position-relative bg-white px-5 pb-4" style="border-radius: 20px;">
         <img class="position-absolute top-0 start-50 translate-middle rounded-circle"
           src="../assets/images/Avatars/undefined (4).png" alt="Avatar" width="100px">
         <br>
@@ -205,7 +205,7 @@
       </div>
 
 
-      <div class="position-relative bg-white px-4" style="border-radius: 20px;">
+      <div class="position-relative bg-white px-5 pb-4" style="border-radius: 20px;">
         <img class="position-absolute top-0 start-50 translate-middle rounded-circle"
           src="../assets/images/Avatars/undefined (1).png" alt="Avatar" width="100px">
         <br>
