--- a/pages/customer/customerDash.html
+++ b/pages/customer/customerDash.html
@@ -19,10 +19,10 @@
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-<div class="row w-100">
+<div class="row w-100" style="overflow-x: hidden;">
 
-    <!-- Side Nav Bar -->
-    <div class="d-flex col-3 flex-column flex-shrink-0 p-3 bg-light position-sticky sidebar collapse fixed-top" style="height: 100vh;">
+    <!-- Side Nav Bar (Large Screen) -->
+    <div class="d-lg-flex d-none col-3 flex-column flex-shrink-0 p-3 bg-light position-sticky sidebar collapse fixed-top" style="height: 100vh;">
         <a href="#" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-dark text-decoration-none">
           <span class="text-green ms-5 fs-4 fw-bold">nameless</span>
         </a>
@@ -75,38 +75,45 @@
       </div>
       <!-- End of Side Nav Bar -->
 
+      
+
     <!-- Main Content -->
-      <div class="col-9 ps-4 d-flex bg-white flex-column pt-4">
+      <div class="col-12 col-lg-9 ps-4 d-flex bg-white flex-column pt-4">
         <h5 class="fs-3 ms-5">Welcome, Michael!</h5>
         <!-- Banner -->
-        <div class="d-flex align-items-center shadow-lg justify-content-between row-cols-2 bg-green edge text-light mb-5 mx-2">
-            <div class="col ps-5">
-                <p class="lh-3 fs-3">
+        <div class="d-flex align-items-center shadow-lg justify-content-between row-cols-2 bg-green edge text-light mb-5 mx-0 mx-lg-2">
+            <div class="col-12 col-lg-8 py-3 px-3 ps-lg-5">
+              <p class="d-flex d-lg-none text-center">
+                Waste management made easy with the click of a button
+              </p>
+                <p class="lh-3 fs-3 d-none d-lg-flex">
                     Waste management made easy with the click of a button
                 </p>
-                <a href="./scheduelePickup.html"><button class="btn btn-light">Scheduele Pick up</button></a>
+
+                <a href="./scheduelePickup.html" class="d-none d-lg-flex text-decoration-none"><button class="btn btn-light">Scheduele Pick up</button></a>
+                <a href="./scheduelePickup.html" class="d-flex d-lg-none text-decoration-none"><button class="btn btn-sm btn-light mx-auto">Scheduele Pick up</button></a>
             </div>
-            <div class="col">
+            <div class="col d-none d-lg-flex">
                 <img src="../../assets/images/Recycling-bro.svg" class="d-block float-end me-5 img-fluid" height="70" width="250" alt="">
             </div>
           </div>
           <!-- End of Banner -->
 
           <!-- Secondary content -->
-          <div class="container my- edge py-2">
+          <div class="container edge py-2">
             <h4 class="text-center fs-3 mb-4">How it works</h4>
-            <div class="row d-flex align-items-center justify-content-between px-5 text-center">
-              <div class="col-3 p-3 shadow d-flex flex-column">
+            <div class="row d-flex flex-column flex-lg-row align-items-center justify-content-between px-5 text-center">
+              <div class="col-12 col-lg-3 p-3  mb-4 shadow d-flex flex-column">
                     <i class='bx bx-trash fs-1 mb-2' style='color:#ffdc03'></i>
                     <span class="text-warning fs-1 fw-bold">01</span>
                     <p class="fs-5">Segregate Trash</p>
               </div>
-                <div class="col-3 p-3 shadow d-flex flex-column">
+                <div class="col-12 col-lg-3 p-3 mb-4 shadow d-flex flex-column">
                     <i class='bx bx-calendar fs-1 mb-2' style='color:#ffdb00'  ></i>
                     <span class="text-warning fs-1 fw-bold">02</span>
                     <p class="fs-5">Scheduele Pick up</p>
                 </div>
-                <div class="col-3 p-3 shadow d-flex flex-column">
+                <div class="col-12 col-lg-3 p-3 mb-4 shadow d-flex flex-column">
                     <i class='bx bxs-truck fs-1 mb-2' style='color:#ffdb00' ></i>
                     <span class="text-warning fs-1 fw-bold">03</span>
                     <p class="fs-5">Trash Pick up</p>
@@ -117,27 +124,69 @@
 
           <!-- Recycle Banner -->
           <div class="d-flex shadow-lg align-items-center justify-content-between text-black row-cols-2 bg-lightGreen edge text-light my-5 mx-2">
-            <div class="col ps-5">
-              <p class="lh-3 fs-1 text-white">Recycle your waste and earn rewards.</p>
-                <button class="btn btn-light">let's Recycle</button>
+            <div class="col-12 col-lg-6 p-3 p-lg-0">
+              <p class="fs-5 text-white d-flex d-lg-none text-center">Recycle your waste and earn rewards.</p>
+              <p class="lh-3 fs-1 text-white d-none ps-5 d-lg-flex">Recycle your waste and earn rewards.</p>
+              <a href="./scheduelePickup.html" class="d-flex d-lg-none text-decoration-none"><button class="btn btn-sm mx-auto btn-light">Recycle</button></a>
+              <a href="./scheduelePickup.html" class="d-none d-lg-flex text-decoration-none ps-5"><button class="btn btn-sm btn-light">Recycle</button></a>
             </div>
-            <div class="col">
+            <div class="d-none d-lg-block col-lg-6 py-4">
                 <img src="../../assets/images/Recycling-amico.svg" class="d-block float-end me-5 img-fluid" height="70" width="250" alt="">
             </div>
           </div>
 
           <!-- Donations Banner -->
           <div class="d-flex shadow-lg align-items-center justify-content-between text-black row-cols-2 bg-pink edge text-light my-5 mx-2">
-            <div class="col ps-5">
-              <p class="lh-3 fs-1 text-white">Make a Donation rather than just throwing it away.</p>
-                <button class="btn btn-light">Donate now</button>
+            <div class="col-12 col-lg-6 p-3 ps-lg-5">
+              <p class="fs-5 text-white d-flex d-lg-none text-center">Make a Donation rather than just throwing it away.</p>
+              <p class="lh-3 fs-1 text-white d-none d-lg-flex">Make a Donation rather than just throwing it away.</p>
+              <a href="" class="d-flex d-lg-none text-decoration-none"><button class="btn btn-sm mx-auto mx-lg-0 btn-light">Donate now</button></a>
             </div>
-            <div class="col">
+            <div class="col d-none d-lg-block">
                 <img src="../../assets/images/Tiny People Filling Cardboard Donation Box With Different Food And Products For Help To Poor People In Shelter Stock Vector - Illustration of poor, cartoon_ 162347419.jfif" class="d-block float-end me-5 img-fluid" height="70" width="250" alt="">
             </div>
           </div>
       </div>
 </div>
+
+
+<footer class="footer d-flex d-lg-none mt-auto py-3 bg-light fixed-bottom bg-light mt-5">
+  <div class="container">
+    <ul class="nav nav-pills flex-row mb-auto d-flex align-items-center justify-content-between">
+      <li class="nav-item flex-column">
+        <a href="#" class="nav-link active-footer" aria-current="page">
+            <i class='bx bx-home fs-3 text-green'></i>
+            <!-- Home -->
+        </a>
+      </li>
+      <li>
+        <a href="./scheduelePickup.html" class="nav-link link-dark">
+            <i class='bx bxs-truck fs-3 text-green'></i>
+            <!-- Pick up -->
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link link-dark">
+            <i class='bx bxs-book fs-3 text-green'></i>
+            <!-- Learn -->
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link link-dark">
+            <i class='bx bxs-heart fs-3 text-green'></i>
+            <!-- Donation -->
+        </a>
+      </li>
+      <li>
+        <a href="#" class="nav-link link-dark">
+            <i class='bx bx-wallet fs-3 text-green'></i>
+            <!-- My Wallet -->
+        </a>
+      </li>
+    </ul>
+  </div>
+</footer>
+
 
       <!-- Script -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
