--- a/pages/customer/customerDash.html
+++ b/pages/customer/customerDash.html
@@ -19,7 +19,7 @@
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-<div class="row w-100" style="overflow-x: hidden;">
+<div class="row w-100">
 
     <!-- Side Nav Bar (Large Screen) -->
     <div class="d-lg-flex d-none col-3 flex-column flex-shrink-0 p-3 bg-light position-sticky sidebar collapse fixed-top" style="height: 100vh;">
@@ -93,7 +93,7 @@
                 <a href="./scheduelePickup.html" class="d-none d-lg-flex text-decoration-none"><button class="btn btn-light">Scheduele Pick up</button></a>
                 <a href="./scheduelePickup.html" class="d-flex d-lg-none text-decoration-none"><button class="btn btn-sm btn-light mx-auto">Scheduele Pick up</button></a>
             </div>
-            <div class="col d-none d-lg-flex">
+            <div class="col-lg-4 d-none d-lg-block">
                 <img src="../../assets/images/Recycling-bro.svg" class="d-block float-end me-5 img-fluid" height="70" width="250" alt="">
             </div>
           </div>
@@ -140,7 +140,7 @@
             <div class="col-12 col-lg-6 p-3 ps-lg-5">
               <p class="fs-5 text-white d-flex d-lg-none text-center">Make a Donation rather than just throwing it away.</p>
               <p class="lh-3 fs-1 text-white d-none d-lg-flex">Make a Donation rather than just throwing it away.</p>
-              <a href="" class="d-flex d-lg-none text-decoration-none"><button class="btn btn-sm mx-auto mx-lg-0 btn-light">Donate now</button></a>
+              <a href="" class="d-flex text-decoration-none"><button class="btn btn-sm mx-auto mx-lg-0 btn-light">Donate now</button></a>
             </div>
             <div class="col d-none d-lg-block">
                 <img src="../../assets/images/Tiny People Filling Cardboard Donation Box With Different Food And Products For Help To Poor People In Shelter Stock Vector - Illustration of poor, cartoon_ 162347419.jfif" class="d-block float-end me-5 img-fluid" height="70" width="250" alt="">
