--- a/pages/customer/recycleSection/selectCategory.html
+++ b/pages/customer/recycleSection/selectCategory.html
@@ -154,8 +154,12 @@
 
                     </div>
 
-                    <div class="d-flex mt-3 pt-3 align-items-center justify-content-center">
+                    <div class="d-flex mt-3 pt-3 px-5 align-items-center">
+                        <input type="date" class="form-control w-75" placeholder="Select Date">
+                    </div>
 
+                    <div class="d-flex mt-3 pt-3 px-5 align-items-center">
+                        <input type="time" class="form-control w-75">
                     </div>
 
                     <div class="d-flex mt-4 pt-1">
