--- a/pages/customer/customerDash.html
+++ b/pages/customer/customerDash.html
@@ -41,7 +41,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="nav-link link-dark">
+                    <a href="./learnMore.html" class="nav-link link-dark">
                         <i class='bx bxs-book mx-3'></i> Learn
                     </a>
                 </li>
@@ -122,7 +122,7 @@
             <!-- End of Secondary Section -->
 
             <!-- Recycle Banner -->
-            <div class="d-flex shadow-lg align-items-center justify-content-between text-black row-cols-2 bg-lightGreen edge text-light my-5 mx-2">
+            <div class="d-flex shadow-lg align-items-center justify-content-between text-black row-cols-2 bg-lightGreen edge text-light my-2 mx-2">
                 <div class="col-12 col-lg-6 p-3 p-lg-0">
                     <p class="fs-5 text-white d-flex d-lg-none text-center">Recycle your waste and earn rewards.</p>
                     <p class="lh-3 fs-1 text-white d-none ps-5 d-lg-flex">Recycle your waste and earn rewards.</p>
@@ -135,7 +135,7 @@
             </div>
 
             <!-- Donations Banner -->
-            <div class="d-flex shadow-lg align-items-center justify-content-between text-black row-cols-2 bg-pink edge text-light my-5 mx-2">
+            <div class="d-flex shadow-lg align-items-center justify-content-between text-black row-cols-2 bg-pink edge text-light mb-5 mt-5 mx-2">
                 <div class="col-12 col-lg-6 p-3 ps-lg-5">
                     <p class="fs-5 text-white d-flex d-lg-none text-center">Make a Donation rather than just throwing it away.</p>
                     <p class="lh-3 fs-1 text-white d-none d-lg-flex">Make a Donation rather than just throwing it away.</p>
@@ -147,45 +147,45 @@
                 </div>
             </div>
         </div>
+
+        <footer class="footer d-flex d-lg-none sticky-bottom py-3 bg-light">
+          <div class="container">
+              <ul class="nav nav-pills flex-row mb-auto d-flex align-items-center justify-content-between">
+                  <li class="nav-item flex-column">
+                      <a href="#" class="nav-link active-footer" aria-current="page">
+                          <i class='bx bx-home fs-3 text-green'></i>
+                          <!-- Home -->
+                      </a>
+                  </li>
+                  <li>
+                      <a href="./scheduelePickup.html" class="nav-link link-dark">
+                          <i class='bx bxs-truck fs-3 text-green'></i>
+                          <!-- Pick up -->
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#" class="nav-link link-dark">
+                          <i class='bx bxs-book fs-3 text-green'></i>
+                          <!-- Learn -->
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#" class="nav-link link-dark">
+                          <i class='bx bxs-heart fs-3 text-green'></i>
+                          <!-- Donation -->
+                      </a>
+                  </li>
+                  <li>
+                      <a href="#" class="nav-link link-dark">
+                          <i class='bx bx-wallet fs-3 text-green'></i>
+                          <!-- My Wallet -->
+                      </a>
+                  </li>
+              </ul>
+          </div>
+      </footer>
     </div>
 
-
-    <footer class="footer d-flex d-lg-none mt-auto py-3 bg-light fixed-bottom bg-light mt-5">
-        <div class="container">
-            <ul class="nav nav-pills flex-row mb-auto d-flex align-items-center justify-content-between">
-                <li class="nav-item flex-column">
-                    <a href="#" class="nav-link active-footer" aria-current="page">
-                        <i class='bx bx-home fs-3 text-green'></i>
-                        <!-- Home -->
-                    </a>
-                </li>
-                <li>
-                    <a href="./scheduelePickup.html" class="nav-link link-dark">
-                        <i class='bx bxs-truck fs-3 text-green'></i>
-                        <!-- Pick up -->
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link link-dark">
-                        <i class='bx bxs-book fs-3 text-green'></i>
-                        <!-- Learn -->
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link link-dark">
-                        <i class='bx bxs-heart fs-3 text-green'></i>
-                        <!-- Donation -->
-                    </a>
-                </li>
-                <li>
-                    <a href="#" class="nav-link link-dark">
-                        <i class='bx bx-wallet fs-3 text-green'></i>
-                        <!-- My Wallet -->
-                    </a>
-                </li>
-            </ul>
-        </div>
-    </footer>
 
 
     <!-- Script -->
